--- a/Photography.html
+++ b/Photography.html
@@ -37,7 +37,7 @@
     </nav>
     <br>
     <div class="icon-down" id="top">
-        <a class="icon-arrow-down" href="#bottom">To the bottom  <ion-icon name="arrow-down-outline"></ion-icon>
+        <a class="icon-arrow-down" href="#bottom">Bottom  <ion-icon name="arrow-down-outline"></ion-icon>
       </a>
     </div>
     <h1 class="h1">Create a Photography Website.<br> Establish Your Business.</h1>
