--- a/Photography.html
+++ b/Photography.html
@@ -224,7 +224,7 @@
             <a class="pag" href="#">&raquo;</a>
           </div><br>
           <div class="icon-up">
-            <a class="icon-arrow" href="#top">To the top  <ion-icon name="arrow-up-outline"></ion-icon>
+            <a class="icon-arrow" href="#top">Top  <ion-icon name="arrow-up-outline"></ion-icon>
           </a>
         </div>
        
